--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/tungns-viosoft/simblog/issues"
   },
-  "homepage": "https://github.com/tungns-viosoft/simblog#readme"
+  "homepage": "https://github.com/tungns-viosoft/simblog#readme",
+  "dependencies": {
+    "angularjs": "0.0.1",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "ejs": "^2.5.1",
+    "express": "^4.14.0",
+    "method-override": "^2.3.6",
+    "mongodb": "^2.2.5",
+    "morgan": "^1.7.0"
+  }
 }
