--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "compression": "^1.6.2",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
+    "express-ejs-layouts": "^2.2.0",
     "method-override": "^2.3.6",
     "mongodb": "^2.2.5",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "serve-index": "^1.8.0"
   }
 }
